@@ -1,3 +1,9 @@
+2000-06-26  Pavel  <pavel@eazel.com>
+
+	* Makefile.am:
+	Fix broken build - recent changes to Makefile.am put libraries
+	in wrong order.
+
 2000-06-25  Pavel Cisler <pavel@eazel.com>
 
 	* configure.in:
